--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
     "@mui/x-data-grid": "^7.5.1",
+    "antd": "^5.17.4",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
     "firebase": "^10.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.5",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.2.2",
     "sass": "^1.77.2",
     "swiper": "^11.1.3"
