--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VITE_FIREBASE_KEY = AIzaSyBR2GbqwVnW5mbv75jPiPw7Uu1Ac4qqf7Q
-VITE_API_KEY = https://furniture-1.onrender.com
+VITE_API_KEY = https://furniture-imoe.onrender.com
