--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.51.5",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.2.2",
+    "react-toastify": "^10.0.5",
     "sass": "^1.77.2",
     "swiper": "^11.1.3"
   },
